@@ -68,7 +68,7 @@ import org.gjt.sp.util.Log;
  *
  * @author Slava Pestov
  * @author John Gellene (API documentation)
- * @version $Id: MiscUtilities.java,v 1.71 2004/01/25 01:38:29 spestov Exp $
+ * @version $Id: MiscUtilities.java,v 1.72 2004/03/28 00:07:26 spestov Exp $
  */
 public class MiscUtilities
 {
@@ -904,7 +904,7 @@ loop:		for(int i = 0; i < str.length(); i++)
 	/**
 	 * Escapes the specified characters in the specified string.
 	 * @param str The string
-	 * @param extra Any characters that require escaping
+	 * @param toEscape Any characters that require escaping
 	 * @since jEdit 4.1pre3
 	 */
 	public static String charsToEscapes(String str, String toEscape)
@@ -1452,7 +1452,7 @@ loop:		for(;;)
 	//{{{ parsePermissions() method
 	/**
 	 * Parse a Unix-style permission string (rwxrwxrwx).
-	 * @param str The string (must be 9 characters long).
+	 * @param s The string (must be 9 characters long).
 	 * @since jEdit 4.1pre8
 	 */
 	public static int parsePermissions(String s)
