@@ -35,7 +35,7 @@ import org.gjt.sp.jedit.Buffer;
  * implementing it directly.
  *
  * @author Slava Pestov
- * @version $Id: BufferChangeListener.java,v 1.11 2003/11/16 22:54:36 spestov Exp $
+ * @version $Id: BufferChangeListener.java,v 1.12 2004/03/28 00:07:26 spestov Exp $
  * @since jEdit 4.0pre1
  */
 public interface BufferChangeListener
@@ -44,8 +44,8 @@ public interface BufferChangeListener
 	/**
 	 * Called when line fold levels change.
 	 * @param buffer The buffer in question
-	 * @param start The start line number
-	 * @param end The end line number
+	 * @param startLine The start line number
+	 * @param endLine The end line number
 	 * @since jEdit 4.0pre1
 	 */
 	void foldLevelChanged(Buffer buffer, int startLine, int endLine);
